--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <meta property="og:description" content="Online With Beta is VTU Data selling site that where Nigerians cam come and buy Monthly data plans at very affordable prices">
     <meta property="og:url" content="https://Onlinewithbeta.pxxl.click">
 
-    <link rel="icon" type="image/png" href="IMG/icon.png">
 
+  <!-- Favicon & App Icons -->
+  <link rel="icon" href="IMG/icon.png" type="image/x-icon" />
+  
+  <link rel="apple-touch-icon" href="IMG/icon.png" />
+  <link rel="shortcut icon" href="IMG/icon.png" type="image/x-icon" />
+  
+  
+  
+  
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
