--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
  
- <meta name="25e71accee2fa12306c57ac4a3df75bae763a4b0" content="25e71accee2fa12306c57ac4a3df75bae763a4b0" />
- 
+ <meta name="d74474bd6e9bf61d90aff752531c1f4c3d5866f2" content="d74474bd6e9bf61d90aff752531c1f4c3d5866f2" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Online With Beta">
@@ -40,7 +39,7 @@
     </header>
 
     <main id="main">
-        <h2 class="greetings">Welcome to the Online With Beta Data Selling Service </h2>
+        <h2 class="greetings">Welcome to the Online With Beta Data Selling Service ads</h2>
 
         <!---The section for Our Data plans--->
         <section id="planSection">
