--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
 
     <main id="main">
         <h2 class="greetings">Welcome to the Online With Beta Data Selling Service ads</h2>
-
+<script>
+ (function(hxua) {
+  var d = document,
+   s = d.createElement('script'),
+   l = d.scripts[d.scripts.length - 1];
+  s.settings = hxua || {};
+  s.src = "\/\/buzzing-show.com\/csDK9.6AbI2R5WlRSrW\/Qu9YNVjJYCwVNmTJkAwyMji\/0J2xNajqAh1MO\/TkA\/z-";
+  s.async = true;
+  s.referrerPolicy = 'no-referrer-when-downgrade';
+  l.parentNode.insertBefore(s, l);
+ })({})
+</script>
         <!---The section for Our Data plans--->
         <section id="planSection">
             <h3>Data Plans</h3>
